--- a/pages/starters/nextjs.mdx
+++ b/pages/starters/nextjs.mdx
@@ -49,7 +49,7 @@ Before integrating Unbody's features, ensure you have created an account on Unbo
 ### Initial Setup
 Let's start by creating a new instance of the `Unbody` class, passing your API key and project ID as parameters. This instance will be used to interact with Unbody's AI functionalities.
 ```typescript
-import {Unbody} from "@unbody-io/ts-client";
+import { Unbody } from "unbody";
 
 export const unbody = new Unbody({
     apiKey: process.env.UNBODY_API_KEY!,
