--- a/pages/audio-api.mdx
+++ b/pages/audio-api.mdx
@@ -23,7 +23,19 @@ Before you begin, make sure you have the following:
 
 Every audio in Unbody is associated with a Mux asset. To stream an audio with Mux player, you need the `playbackId` associated with the asset, or you can use the `hlsUrl` directly with your preferred HLS player.
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+<Tabs.Tab>
+
+```tsx
+const { data: { payload: audioFiles }, } = await unbody.get
+                                                       .audioFile
+                                                       .select("assetId", "playbackId", "hlsUrl")
+                                                       .exec();
+
+const { assetId, hlsUrl } = audioFiles[0];
+```
+
+</Tabs.Tab>
 <Tabs.Tab>
 
 ```graphql
@@ -35,24 +47,6 @@ query {
     }
   }
 }
-```
-
-</Tabs.Tab>
-<Tabs.Tab>
-
-```tsx
-import { Unbody } from "@unbody-io/ts-client";
-
-const unbody = new Unbody({
-  apiKey: "your-api-key",
-  projectId: "your-project-id",
-});
-
-const {
-  data: { payload: audioFiles },
-} = await unbody.get.audioFile.select("assetId", "playbackId", "hlsUrl").exec();
-
-const { assetId, hlsUrl } = audioFiles[0];
 ```
 
 </Tabs.Tab>
@@ -93,7 +87,31 @@ Mux uses OpenAI's Whisper model to automatically generate captions for your audi
 
 Unbody stores these captions as `SubtitleFile` and `SubtitleEntry` objects, here's how you can retrieve them:
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+
+<Tabs.Tab>
+
+```ts
+const { data: { payload: subtitleFiles }, } = await unbody.get
+                                                          .subtitleFile
+                                                          .where({
+                                                            media: {
+                                                              AudioFile: {
+                                                                originalName: "your-audio-file.mp3",
+                                                              },
+                                                            },
+                                                          })
+                                                          .select(
+                                                            "entries.SubtitleEntry.start",
+                                                            "entries.SubtitleEntry.end",
+                                                            "entries.SubtitleEntry.text"
+                                                          )
+                                                          .exec();
+
+const { entries } = subtitleFiles[0];
+```
+
+</Tabs.Tab>
 
 <Tabs.Tab>
 
@@ -121,38 +139,6 @@ query {
 
 </Tabs.Tab>
 
-<Tabs.Tab>
-
-```ts
-import { Unbody } from "@unbody-io/ts-client";
-
-const unbody = new Unbody({
-  apiKey: "your-api-key",
-  projectId: "your-project-id",
-});
-
-const {
-  data: { payload: subtitleFiles },
-} = await unbody.get.subtitleFile
-  .where({
-    media: {
-      AudioFile: {
-        originalName: "your-audio-file.mp3",
-      },
-    },
-  })
-  .select(
-    "entries.SubtitleEntry.start",
-    "entries.SubtitleEntry.end",
-    "entries.SubtitleEntry.text"
-  )
-  .exec();
-
-const { entries } = subtitleFiles[0];
-```
-
-</Tabs.Tab>
-
 </Tabs>
 
 Here are some examples of how you can leverage the auto-generated captions:
@@ -167,7 +153,19 @@ Furthermore, if you have the auto-generated fields feature enabled in your proje
 
 Mux generates static renditions of assets for offline viewing, direct downloads, scenarios where streaming HLS streaming is not possible, and other use cases. For audio files, Mux produces a single `.m4a` file. Here's how you can access it:
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+<Tabs.Tab>
+
+```tsx
+const { data: { payload: audioFiles }, } = await unbody.get
+                                                       .audioFile
+                                                       .select("files.url", "files.name", "files.ext", "files.size", "files.bitrate")
+                                                       .exec();
+
+const audioFile = audioFiles[0].files[0];
+```
+
+</Tabs.Tab>
 <Tabs.Tab>
 
 ```graphql
@@ -184,26 +182,6 @@ query {
     }
   }
 }
-```
-
-</Tabs.Tab>
-<Tabs.Tab>
-
-```tsx
-import { Unbody } from "@unbody-io/ts-client";
-
-const unbody = new Unbody({
-  apiKey: "your-api-key",
-  projectId: "your-project-id",
-});
-
-const {
-  data: { payload: audioFiles },
-} = await unbody.get.audioFile
-  .select("files.url", "files.name", "files.ext", "files.size", "files.bitrate")
-  .exec();
-
-const audioFile = audioFiles[0].files[0];
 ```
 
 </Tabs.Tab>
