--- a/pages/content-api/query-methods/get.mdx
+++ b/pages/content-api/query-methods/get.mdx
@@ -13,7 +13,17 @@ To get started,
 
 We have given below an example to fetch the title and summary of all Google Docs.
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+ <Tabs.Tab>
+```tsx copy
+const response = await unbody.get
+                             .googleDoc
+                             .select("title", "summary")
+                             .exec();
+console.log(response);
+```
+</Tabs.Tab>
+
   <Tabs.Tab>
 ```graphql copy
 {
@@ -26,12 +36,6 @@ We have given below an example to fetch the title and summary of all Google Docs
 }
 ```
   </Tabs.Tab>
-  <Tabs.Tab>
-```tsx copy
-const response = await u.get.googleDoc.select("title", "summary");
-console.log(response);
-```
-</Tabs.Tab>
 </Tabs>
 
 **Expected response:**
@@ -60,7 +64,19 @@ console.log(response);
 
 You can also deep dive and fetch properties that are cross-referenced to other classes. The example given below shows how to fetch image URLs from text blocks. This will return the title, summary, and URLs of related image blocks.
 
-<Tabs items={['GraphQL', 'TypeScript']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
+  <Tabs.Tab>
+```tsx copy
+const response = unbody.get
+                       .googleDoc
+                       .select(
+                         "title",
+                         "summary",
+                         "blocks.imageBlocks.url"
+                       )
+                       .exec()
+```
+</Tabs.Tab>
   <Tabs.Tab>
 ```graphql copy
 {
@@ -70,7 +86,7 @@ You can also deep dive and fetch properties that are cross-referenced to other c
       summary
       blocks {
         ... on ImageBlock {
-          URL
+          url
         }
       }
     }
@@ -78,15 +94,7 @@ You can also deep dive and fetch properties that are cross-referenced to other c
 }
 ```
   </Tabs.Tab>
-  <Tabs.Tab>
-```tsx copy
-const response = u.get.googleDoc.select(
-  "title",
-  "summary",
-  "blocks.imageBlocks.url"
-);
-```
-</Tabs.Tab>
+
 </Tabs>
 
 **Expected response:**
