--- a/pages/content-api/search/keyword-search.mdx
+++ b/pages/content-api/search/keyword-search.mdx
@@ -9,9 +9,13 @@ This method is best to use when you want to provide quick and straightforward se
 Keyword search can be operated on an  any object's `string` or `string[]` field. Here's how:
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
-        unbody.get.<object_name>.search.find("query", {...options})
+        unbody.get
+              .<object_name>
+              .search
+              .find("query", {...options})
+              .exec()
         ```
     </Tab>
     <Tab title={"GraphQL"}>
@@ -36,12 +40,13 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
 
 ### Example 1 - Google Drive / Google Docs
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .find("specific keyword");
+                                              .googleDoc
+                                              .search
+                                              .find("specific keyword")
+                                              .exec()
 
         // payload is an array of GoogleDocs that match "specific keyword"
         ```
@@ -66,12 +71,13 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
 ### Example 3 - Any text block
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .textBlock
-            .search
-            .find("specific keyword");
+                                              .textBlock
+                                              .search
+                                              .find("specific keyword")
+                                              .exec()
 
         // payload is an array of textBlocks that match "specific keyword"
         // this search includes all types of objects available in the sources of your project
@@ -98,12 +104,13 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
 ### Example 4 - Google Drive / Google Docs - specific fields
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"Unbody SDK"}>
+    <Tab title={"SDK (.ts)"}>
         ```jsx
         const {data: {payload}} = await unbody.get
-            .googleDoc
-            .search
-            .find("specific keyword", ["title", "autoSummary"]);
+                                              .googleDoc
+                                              .search
+                                              .find("specific keyword", ["title", "autoSummary"])
+                                              .exec()
 
         // payload is an array of GoogleDocs that match "specific keyword" - but here the search only is executed over two specifiec fields; "title" and "autoSummary"
         ```
